Relic Port-BETA-2